# Codel

./: README.md  pyproject.toml  webserver.py
.github/workflows/: build_with_badges.yml
static/css/: colors.css  dialog.css  editor.css  index.css  slick.css
static/js/: char-counter.js  editor.js  index.js
static/lib/: gradient-border.min.js
templates/: index.html
