[tool.poetry]
name = "codel"
version = "0.1.0"
description = ""
authors = ["Pop101 <leon@leibmann.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
waitress = "^2.1.2"
apscheduler = "^3.10.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
